Final chess task submission from correct local copy

--- a/Chess/include/CMakeLists.txt
+++ b/Chess/include/CMakeLists.txt
@@ -1,1 +1,1 @@
-﻿target_include_directories (Chess PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+﻿target_include_directories(Chess PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
