--- a/Chess/src/CMakeLists.txt
+++ b/Chess/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-﻿target_sources (Chess PRIVATE "main.cpp"
-							  "Chess.cpp")
+﻿file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+target_sources(Chess PRIVATE ${SRC_FILES})
