--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,18 @@
-# Ignore build files and compiled binaries
-/build/
-/CMakeCache.txt
-/CMakeFiles/
-/*.o
-/*.a
-/*.so
-/*.exe
-/*.out
+# macOS
+.DS_Store
 
-# Ignore IDE and editor configuration files
-.vscode/
+# CMake build
+build/
+cmake-build-debug/
+CMakeFiles/
+CMakeCache.txt
+
+# Compiled files
+*.o
+*.obj
+*.exe
+*.out
+
+# CLion
 .idea/
-*.swp
-*.swo
-
-# Ignore GitHub Actions temporary files
-.github/workflows/*.log
-.github/workflows/*.cache
-
-# Ignore debugging and log files
-*.log
-*.tmp
-*.bak
-
-# Ignore temporary image cache
-img/cache/
-
+*.iml
